<resources>
    <string name="app_name">SimiTraining</string>
    <string name="main_activity_btn_ini">Iniciar</string>
    <string name="main_activity_title">Inicio de sesión</string>
    <string name="etUser">Usuario</string>
    <string name="etPassword">Password</string>
    <string name="Home_Pai">Paises</string>
    <string name="Home_Calc">Calculadora</string>
    <string name="Home_Quiz">Quiz</string>
    <string name="Home_Acer">Acerca</string>
    <string name="paises_de_america">Paises de America</string>
    <string name="Nombre_de_usuario">Nombre de usuario</string>
    <string name="Bienvenido_al_app">Bienvenido al app</string>
    <string name="cd_img"> content description img</string>

    <string name="cerrar_sesion">Cerrar sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_nosotros_fragment">Nosotros fragment</string>
    <string name="hello_acerca_fragment">Acerca de fragment</string>

    <!-- Navigation Drawer strings -->
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_tienda_fragment">Tienda Fragment</string>

</resources>