<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="175dp"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    >

    <ImageView
        android:id="@+id/nav_header_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/cd_img"
        android:src="@drawable/logo3"
        android:padding="8dp"

        />


    <TextView
        android:id="@+id/nav_header_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/Nombre_de_usuario"
        android:paddingTop="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Bienvenido_al_app"
        />

</LinearLayout>