<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#168BC34A"
    tools:openDrawer="start"
    android:fitsSystemWindows="true"
    >


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="git push -u origin main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/home_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/btn_home_countries"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/Home_Pai"
            android:layout_marginBottom="16dp"
            android:icon="@drawable/outline_flag"
            >
        </Button>

        <Button
            android:id="@+id/btn_home_calc"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/Home_Calc"
            android:layout_marginBottom="16dp"
            android:icon="@drawable/calc" >

        </Button>

        <Button
            android:id="@+id/btn_home_quiz"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/Home_Quiz"
            android:layout_marginBottom="16dp"
            >

        </Button>


        <Button
            android:id="@+id/btn_home_acerca"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/Home_Acer"
            >

        </Button>


    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        app:menu="@menu/navigation_menu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="false"
        app:headerLayout="@layout/nav_header"
    />


    </androidx.drawerlayout.widget.DrawerLayout>