<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondohome"
    tools:context=".MainActivity">
    <!--
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
    -->

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etUser"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_margin="32dp"
        android:layout_marginBottom="12dp"
        android:textColor="@color/black"
        android:text="@string/etUser"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.959"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_margin="32dp"
        android:layout_marginBottom="12dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:text="@string/etPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.882"
        tools:ignore="MissingConstraints" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnOne"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@color/AzulAqua"
        android:text="@string/main_activity_btn_ini"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_rawRes="@raw/confetti"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
         />
</androidx.constraintlayout.widget.ConstraintLayout>